# usefulunpack

./: .gitignore  Cargo.toml  README-zh.md  README.md  build.sh
app/: build.gradle
app/src/main/java/com/usefulunpacker/: ArchiveCore.kt  MainActivity.kt  SevenZCore.kt  ZipCore.kt
app/src/main/res/layout/: activity_main.xml  item_file.xml
crates/sevenz-core/: Cargo.toml
crates/sevenz-core/src/: lib.rs
crates/zip-core/: Cargo.toml
crates/zip-core/src/: lib.rs
src/: lib.rs
