[package]
name = "archive_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "upk"
path = "src/cli.rs"

[dependencies]
jni = "0.21"
xp3 = "0.4"
pf8 = "0.1"
tokio = { version = "1", features = ["io-util"] }
isomage = "0.1"

[profile.release]
opt-level = "s"
strip = true
lto = true
