[workspace]
members = [
    "crates/common",
    "crates/xp3-core",
    "crates/pfs-core",
    "crates/nsa-core",
    "crates/iso-core",
    "crates/ypf-core",
    "crates/zip-core",
    "crates/sevenz-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
strip = true
lto = true
